--- a/frontend/indexSalta.html
+++ b/frontend/indexSalta.html
@@ -4,45 +4,44 @@
 <head>
   <meta charset="UTF-8" />
   <!-- PILAR -->
-  <link rel="icon" type="image/svg+xml" href="/images/pilar/indexLogo.png" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/images/pilar/indexLogo.png" /> -->
   <!-- ZARATE -->
   <!-- <link rel="icon" type="image/svg+xml" href="/images/zarate/indexLogo.png" /> -->
   <!-- SALTA -->
-  <!-- <link rel="icon" type="image/svg+xml" href="/images/salta/indexLogo.png" /> -->
+  <link rel="icon" type="image/svg+xml" href="/images/salta/indexLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3 Para Ganar</title>
 
   <!-- Google Tag (gtag.js) para Google Analytics -->
-<!--   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYZHRLJ9XG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYZHRLJ9XG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-QYZHRLJ9XG');
-  </script> -->
-
+  </script>
 
   <!-- Google Tag Manager (va en el head) -->
-<!--   <script>(function (w, d, s, l, i) {
+  <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-MG4VQBJJ');</script> -->
-
+    })(window, document, 'script', 'dataLayer', 'GTM-MG4VQBJJ');</script>
   <!-- End Google Tag Manager -->
 
   <!-- Clarity Script de Microsoft Clarity -->
-<!--   <script type="text/javascript">
+  <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "oufves3zgd");
-  </script> -->
+  </script>
+
 
 </head>
 
@@ -50,6 +49,7 @@
   <!-- Google Tag Manager (noscript) va en el body -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MG4VQBJJ" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
+
   <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
