update to landing for december

--- a/frontend/indexPilar.html
+++ b/frontend/indexPilar.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- Default favicon (puede estar vacío inicialmente) -->
-  <!-- <link id="dynamic-favicon" rel="icon" type="/images/pilar/indexLogo.png" href="" /> -->
   <!-- PILAR -->
   <link rel="icon" type="image/svg+xml" href="/images/pilar/indexLogo.png" />
   <!-- ZARATE -->
@@ -12,7 +10,6 @@
   <!-- SALTA -->
   <!-- <link rel="icon" type="image/svg+xml" href="/images/salta/indexLogo.png" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>3 Para Ganar</title>
 
   <!-- Google Tag (gtag.js) para Google Analytics -->
@@ -39,6 +36,24 @@
   </script>
   <!-- End Google Tag Manager -->
 
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '877437200704413');
+    fbq('track', 'PageView');
+  </script>
+
+  <!-- End Meta Pixel Code -->
 
   <!-- Clarity Script de Microsoft Clarity -->
   <script type="text/javascript">
@@ -49,12 +64,12 @@
       y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "oufu2aiujt");
   </script>
-
-
-
 </head>
 
 <body>
+  <!-- METAAA BODY -->
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=877437200704413&ev=PageView&noscript=1" /></noscript>
   <!-- Google Tag Manager (noscript) va en el body -->
   <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TCZRNNXP" height="0" width="0"
