--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,49 +4,70 @@
 <head>
   <meta charset="UTF-8" />
   <!-- PILAR -->
-  <link rel="icon" type="image/svg+xml" href="/images/pilar/indexLogo.png" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/images/pilar/indexLogo.png" /> -->
   <!-- ZARATE -->
   <!-- <link rel="icon" type="image/svg+xml" href="/images/zarate/indexLogo.png" /> -->
   <!-- SALTA -->
-  <!-- <link rel="icon" type="image/svg+xml" href="/images/salta/indexLogo.png" /> -->
+  <link rel="icon" type="image/svg+xml" href="/images/salta/indexLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3 Para Ganar</title>
 
   <!-- Google Tag (gtag.js) para Google Analytics -->
-<!--   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYZHRLJ9XG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYZHRLJ9XG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-QYZHRLJ9XG');
-  </script> -->
-
+  </script>
 
   <!-- Google Tag Manager (va en el head) -->
-<!--   <script>(function (w, d, s, l, i) {
+  <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-MG4VQBJJ');</script> -->
+    })(window, document, 'script', 'dataLayer', 'GTM-MG4VQBJJ');</script>
+  <!-- End Google Tag Manager -->
+
 
   <!-- End Google Tag Manager -->
 
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1286816738989847');
+    fbq('track', 'PageView');
+  </script>
+  <!-- End Meta Pixel Code -->
+
   <!-- Clarity Script de Microsoft Clarity -->
-<!--   <script type="text/javascript">
+  <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "oufves3zgd");
-  </script> -->
-
+  </script>
 </head>
 
 <body>
+  <!-- METAAA BODY -->
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1286816738989847&ev=PageView&noscript=1" /></noscript>
   <!-- Google Tag Manager (noscript) va en el body -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MG4VQBJJ" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
