--- a/frontend/indexSalta.html
+++ b/frontend/indexSalta.html
@@ -33,6 +33,27 @@
     })(window, document, 'script', 'dataLayer', 'GTM-MG4VQBJJ');</script>
   <!-- End Google Tag Manager -->
 
+
+  <!-- End Google Tag Manager -->
+
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1286816738989847');
+    fbq('track', 'PageView');
+  </script>
+  <!-- End Meta Pixel Code -->
+
   <!-- Clarity Script de Microsoft Clarity -->
   <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
@@ -41,15 +62,15 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "oufves3zgd");
   </script>
-
-
 </head>
 
 <body>
+  <!-- METAAA BODY -->
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1286816738989847&ev=PageView&noscript=1" /></noscript>
   <!-- Google Tag Manager (noscript) va en el body -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MG4VQBJJ" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
-
   <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
